# VMK

./: .gitignore  CMakeLists.txt  Makefile  README.md  org.fcitx.Fcitx5.Addon.Vmk.metainfo.xml.in  translate.sh
.github/workflows/: build.yml  ubuntu-release-build.yml
addon/src/: vmk.cpp  vmk.h  vmkonfig.h
data/: CMakeLists.txt
fcitx5-vmk/: CMakeLists.txt
fcitx5-vmk/src/: vmk.cpp
misc/: CMakeLists.txt
po/: fcitx5-vmk.pot  vi.po
server/: vmk-server.cpp
server/src/: fcitx5-vmk-server.cpp
src/: CMakeLists.txt  emoji.h  vmk-addon.conf.in.in  vmk-config.h  vmk.cpp  vmk.h
